# prismadb

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test_data.json
.github/workflows/: ci.yml
api/: serializers.py  urls.py  views.py
embeddings/: analysis.py  embedders.py  forms.py  models.py  services.py  urls.py  views.py
embeddings/migrations/: 0001_initial.py  0002_dataset_document_delete_uploadedjson.py  0003_alter_dataset_model_name.py  0004_dataset_analysis_metadata_document_cluster_label_and_more.py  0005_remove_dataset_analysis_metadata_and_more.py  0006_add_opensearch_id.py  0007_ollama_model_name.py  0008_remove_opensearch_id.py  0009_remove_document_embedding.py
explorer/: family_builder.py  forms.py  graph_builder.py  interpreter.py  llm_utils.py  models.py  statistics.py  task_status.py  urls.py  views.py
explorer/migrations/: 0001_initial.py  0002_alter_saefeature_options_and_more.py  0003_interpretation_saefeature_active_interpretation.py  0004_featurefamily.py  0005_saefeature_mean_activation_and_more.py  0006_appsetting.py  0007_interpretation_predictor_f1_and_more.py
project/: cli.py  constants.py  context_processors.py  settings.py  urls.py  utils.py  views.py
sae/: apps.py  forms.py  models.py  modules.py  trainer.py  urls.py  views.py
sae/migrations/: 0001_initial.py  (+4 more)
sample_data/: pubmed_abstracts_1000.json
search/: bulk_ops.py  client.py  collections.py  indices.py  queries.py  urls.py  views.py
static/: prisma.avif
templates/: base.html  home.html
(+21 files in other folders)
